overflow fix revert

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ html {
 body {
     height: 100%;
     font-size: 1.6rem;
-    overflow: hidden;
 }
 
 body {
